Fix style issues
Merging the docs theme with the initial templates created layout issues
that this commit fixes.

--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -22,10 +22,10 @@ html.theme-change-active {
 body {
   text-rendering: optimizeLegibility;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-  font-size: 0.9375rem;
-  line-height: 1.5;
-  display: flex;
-  flex-flow: row wrap;
+  /* font-size: 0.9375rem; */
+  /* line-height: 1.5; */
+  /* display: flex; */
+  /* flex-flow: row wrap; */
   hyphens: auto;
   background: #fafafa;
   background: var(--bg-color,  #fafafa);
@@ -100,8 +100,8 @@ h1 {
   margin: 1rem 0;
 }
 nav {
-  width: 34vw;
-  max-width: 40rem;
+  /* width: 34vw; */
+  /* max-width: 40rem; */
   padding: 4vw;
   display: flex;
   flex-flow: column nowrap;
@@ -131,9 +131,9 @@ nav em {
   line-height: 1.2;
 }
 main {
-  width: 48vw;
+  /* width: 48vw; */
+  /* max-width: 55rem; */
   padding: 4vw;
-  max-width: 55rem;
   display: flex;
   flex-flow: column nowrap;
   margin-top: 2.375rem;
